# CppMiniGame

./: CMakeLists.txt  main.cpp  readme.md
GameFrame/: GameFrame.cpp  GameFrame.h
GuessNumber/: GuessNumber.cpp  GuessNumber.h
Snakes/: Snakes.cpp  Snakes.h
